--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -6,15 +6,16 @@
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
- "scripts": {
- "dev": "vite",
- "build": "vite build",
- "preview": "vite preview",
- "predeploy": "npm run build",
- "deploy": "gh-pages -d dist"
- },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
-    "vue": "^3.5.25"
+    "vue": "^3.5.25",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.2",
